main_style.css
* {
  margin: 0;
  padding: 0;
  --text-color: #444;
  --link-color: #359;
}

html {
  height: 100%;
}

body {
  width: 100%;
  height: 100%;
  min-height: 100vh; /* at least fill browser viewport height */
  font-family: Roboto, sans-serif;
  font-size: 1rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.wrapper {
  min-height:100vh;
  display: flex;
  flex-direction: column;
}

.skip-to-main-content {
  position: absolute;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.skip-to-main-content:focus {
  top: 0;
  left: 0;
  text-indent: 0;
}

main {
  width: 100%;
  flex: 1;
}

a {
  color: inherit;
  text-decoration: none;
}

h1 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 4rem;
  font-weight: normal;
  line-height: 1.1;
  margin: 10px auto;
}

h2 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 2.25rem;
  font-weight: normal;
  line-height: 1.5;
  margin: 10px auto;
}

h3 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 1.5rem;
  font-weight: normal;
  line-height: 1.5;
  margin: 10px auto;
}

p, .container ul, .container ol {
  font-family: Roboto, sans-serif;
  font-size: 1rem;
  line-height: 1.4;
  text-indent: 30px;
  text-align: justify;
  color: var(--text-color);
}
.container ul {
  list-style-position: inside;
}
.container ol {
  margin-left: 30px;
  text-indent: 0;
}

p a, h3 a {
  color: var(--link-color);
  opacity: 1;  
  text-decoration: underline;
  text-decoration-color: #abd; /* lighter version of link-color */
  transition: all 200ms ease-in-out;
}

p a:hover, h3 a:hover {
  text-decoration-color: var(--link-color);
}

blockquote {
  position: relative;
  padding: 1.5em 2.5em;
  background: rgba(0, 0, 0, 0.05);
  font-family: Roboto, sans-serif;
  font-size: 1rem;
  line-height: 1.75;
}

blockquote:before {
  position: absolute;
  content: "\201C";
  top: 0.75em;
  left: 0.5em;
  font-size: 2rem;
  line-height: 1;
}

.logo {
  font-family: "Crete Round", Georgia, serif;
  font-size: 2.5rem;
  float: left;
}
.no-indent {
  text-indent: 0;
}

.float-right {
  margin: 15px;
  margin-right: 0;
  float: right;
}

.float-left {
  margin: 15px;
  margin-left: 0;
  float: left;
}

.half-column {
  flex: 50%;
}

.grid-two-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

aside {
  font-size: 1.125rem;
  font-style: italic;
  text-align: center;
  margin: 20px;
}

time {
  font-size: 0.875rem;
  font-style: italic;
  display: block;
  margin-bottom: 0.5rem;
}

#headshot {
  width: 65%;
  display: block;
  margin: auto;
}

#warrior-strong {
  width: 25%;
}

#mask-wearing {
  width: 45%;
}

#cso-flyer {
  width: 25%;
}

#lesson-video {
  width: 50%;
}

#lessons-1 {
  width: 50%;
}

.video-caption {
  text-indent: 0; /* override default p */
  text-align: center;
  margin: 5px 0;
}

.video-container {
  overflow: hidden;
  padding-top: 56.25%;
  position: relative;
}

.video-container iframe, .video-container-portrait iframe {
  border: 0;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

iframe {
  box-sizing: border-box;
}

figcaption {
  text-align: center;
  font-size: 0.9rem;
}

img {
  box-sizing: border-box;
  max-width: 100%;
  max-height: 100%;
  padding: 3px;
  border: 1px solid #bdbdbd;
}

.post-content figure {
  width: 100%;
  margin: 15px;
}
.post-content img {
  height: 500px;
  display: block;
  margin: auto;
}

.banner-image {
  height: 200px;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-color: transparent;
  background-size: cover;
}
.banner-image:before { /* left half overlay */
  content: ""; /* blank string required */
  display: block;
  position: absolute;
  top: 0;
  width: 50%;
  height: 200px;
  background: linear-gradient(to bottom right, rgba(0,0,0,0.75), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
.banner-image:after { /* right half overlay */
  content: ""; /* blank string required */
  display: block;
  position: absolute;
  top: 0;
  left: 50%;
  width: 50%;
  height: 200px;
  background: linear-gradient(to bottom left, rgba(0,0,0,1), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
.banner-image.banner-1 {
  background-image: url(images/banner-1.jpg);
}
.banner-image.banner-2 {
  background-image: url(images/banner-2.jpg);
}

section {
  vertical-align: middle;
}
.section-1 {
  background-color: white;
}
.section-2 {
  background-color: #e5e5e5;
}

#splash { /* used on home page */
  min-height: 100vh; /* at least fill browser viewport height */
  height: 100%;
  background-image: url(images/splash.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
}
#splash h1, #splash h2, #splash h3 {
  color: white;
  text-align: left;
  font-weight: normal;
}
#splash button, #splash .button {
  text-align: center;
  margin: auto;
}

.spacer-large {
  height: 50px;
}
.spacer-small {
  height: 15px;
}

.container {
  position: relative;
  width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
}

main .container {
  padding: 30px 30px;
  max-width: 1200px;
}

header {
  position: fixed;
  top: 0;
  z-index: 12;
  height: 70px;
  width: 100%;
  max-width: 100%;
  padding: 20px 40px;
  color: white;
  border-color: white;
  box-sizing: border-box;
  transition: background-color 200ms ease, color 260ms ease, padding 180ms ease;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

header .hamburger {
  display: none;
}

header a, footer a {
  transition: opacity 200ms ease;
}

header .logo a:hover, footer a:hover {
  opacity: .6;
}

footer {
  width: 100%;
  background-color: #ccc;
  border-top: 2px solid darkgray;
}
footer p {
  font-size: 0.9rem;
  text-align: center;
  text-indent: 0; /* override default p */
  padding: 20px;
}
footer a {
  color: inherit;
  text-decoration: none;
}

nav ul {
  float: right;
  max-width: calc(100vw - 150px);
}

nav li {
  display: inline-block;
  margin: 5px 5px 5px 0;
}

nav a {
  display: block;
  padding: 12px .6rem;
  border: 1px solid transparent;
  font-family: Roboto, sans-serif;
  font-size: 0.9rem;
  font-weight: bold;
  line-height: 1;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  transition: opacity 200ms ease;
}

nav li a:hover {
  opacity: 0.6;
}

.submenu {
  display: none;
  position: absolute;
  color: black;
  background: white;
  box-shadow: inset 0px 0px 0px 1px;
}

.submenu li {
  display: block;
  margin: 0;
}
.submenu a {
  font-size: 0.8rem;
  font-weight: normal;
}
.submenu a:hover {
  opacity: 1;
  color: black; /* overriding other nav links */
  background: rgba(0, 0, 0, 0.1);
}

.has-submenu:hover .submenu {
  display: block;
}

body.sticky-header header {
  position: fixed;
  color: black;
  background: white;
  border-color: black;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
  padding: 12px 40px;
}

body.sticky-header header .hamburger span,
body.sticky-header header .hamburger span:before,
body.sticky-header header .hamburger span:after {
  background: #000000;
}

 ::-webkit-input-placeholder,
 :-moz-placeholder,
 ::-moz-placeholder,
 :-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.4);
}

form label {
  display: block;
  margin: 10px 0;
  color: var(--text-color);
}

.form-required {
  color: red;
}

form input,
form textarea,
form select {
  font-family: Roboto, sans-serif;
  font-size: 0.9rem;
  display: block;
  box-sizing: border-box;
  padding: .6rem;
  margin-bottom: .6rem;
  border: 1px solid gray;
  border-radius: 0;
  background: transparent;
  width: 100%;
  max-width: 400px;
  transition: all 200ms ease;
}

form textarea {
  height: 150px;
}

form #submit-button {
  width: 100px;
}

form input:hover,
form input:focus,
form textarea:hover,
form textarea:focus {
  background-color: rgba(0, 0, 0, 0.05);
  border-color: black;
  outline: none;
}

.center {
  display: flex;
  justify-content: center;
}

button, .button {
  padding: .9rem 1.9rem;
  border-radius: 0;
  font-family: "Roboto", sans-serif;
  font-size: 0.9rem;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  border: 2px solid;
  transition: all 100ms ease-in-out;
}

button:hover, .button:hover {
  background-color: #eee;
}

#splash button, #splash .button {
  color: white;
  border-color: white;
}

#splash button:hover, #splash .button:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

@media screen and (max-width: 992px) {
  #headshot {
    width: 90%;
  }
  .container {
    overflow: hidden;
  }
  header {
    top: 0;
    left: 0;
    padding: 5px 20px !important;
    height: 50px;
  }
  header .logo {
    font-size: 2rem;
  }
  
  /* hamburger: hide middle bar, rotate before and after into X */
  /* nav-open class added to body by JavaScript */
  body.nav-open header label.hamburger span {
    position: relative;
    background: transparent;
  }
  body.nav-open header label.hamburger span:before {
    top: 1px;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  body.nav-open header label.hamburger span:after {
    top: -1px;
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -ms-transform: rotate(135deg);
    transform: rotate(135deg);
  }
  label.hamburger {
    display: block;
    position: absolute;
    top: 0;
    right: 10px;
    width: 30px;
    height: 30px;
    padding: 10px;
    cursor: pointer;
    transition: all 200ms ease-in-out;
  }
  label.hamburger span,
  label.hamburger span:before,
  label.hamburger span:after {
    position: relative;
    display: block;
    width: 22px;
    height: 2px;
    background: #ffffff;
    content: "";
    transition: all 200ms ease-in-out;
  }
  label.hamburger span {
    top: 9px;
    left: 4px;
    margin: 5px 0;
  }
  label.hamburger span:before {
    top: -8px;
  }
  label.hamburger span:after {
    bottom: -6px;
  }

  nav {
    width: 100vw;
    margin-left: -20px; /* counteract 20px margin from header */
    clear: both;
    margin-top: 45px; /* I would think 50, but this is what works */
    display: none; /* until slideToggled by JS */
  }
  nav ul {
    float: none;
    max-width: none;
    color: black;
    background-color: white;
    box-shadow: 0px 1px 2px 0px gray;
  }
  nav li {
    display: block; /* vertical stack instead of horizontal */
    font-size: 1.3rem;
    text-align: center;
    margin: 0;
  }
  nav a {
    width: inherit;
    border-top: 1px solid black;
    padding: 10px 0;
    width: 100%;
  }
  .has-submenu > a:after {
    content: "\25bc";
    position: absolute;
    right: 0;
    margin-right: 20px;
  }
  .has-submenu:hover .submenu {
    display: none; /* hovering is great for desktop, mobile will use click instead (JS) */
  }
  .submenu {
    position: relative; /* include in flow again */ 
    box-shadow: none;
  }
  
  main .container {
    padding: 30px 20px;
  }
}

@media screen and (max-width: 767px) {
  #headshot,
  #warrior-strong,
  #mask-wearing,
  #cso-flyer,
  #lesson-video,
  #lessons-1 {
    width: 100%;
    max-width: 300px;
    float: none;
    margin: auto;
  }
  #mask-wearing, #lesson-video, #cso-flyer {
    margin: 10px auto;
  }
  /* those whose height is less than width need no width limit */
  /* because the screen already limits their greatest dimension */
  #mask-wearing, #lesson-video {
    max-width: none;
  }

  .grid-two-columns  {
    grid-template-columns: 1fr;
  }
  .grid-two-columns:not(.video-grid) {
    grid-gap: 0;
  }
  .half-column {
    flex: 100%;
  }
  
  .banner-image, .banner-image:before, .banner-image:after {
    height: 120px;
  }
}
@media screen and (max-height: 600px) { /* only important for splash on home page */
  .spacer-large {
    height: 25px;
  }
  .spacer-small {
    height: 10px;
  }
  #splash h1 {
    font-size: 2rem;
  }
  #splash h2 {
    font-size: 1.5rem;
  }
}

